DAT151/lab1/lab1-test-dir/ParCpp.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParCpp.y
-----------------------------------------------------------------------------

state 36 contains 1 shift/reduce conflicts.
state 51 contains 1 shift/reduce conflicts.
state 143 contains 1 shift/reduce conflicts.
state 275 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pListDef -> ListDef                         (2)
	%start_pType -> Type                               (3)
	%start_pListType -> ListType                       (4)
	%start_pListCIdent -> ListCIdent                   (5)
	%start_pStructDecl -> StructDecl                   (6)
	%start_pListStructDecl -> ListStructDecl           (7)
	%start_pArg -> Arg                                 (8)
	%start_pListArg -> ListArg                         (9)
	%start_pStm -> Stm                                 (10)
	%start_pListStm -> ListStm                         (11)
	%start_pExp16 -> Exp16                             (12)
	%start_pExp15 -> Exp15                             (13)
	%start_pExp14 -> Exp14                             (14)
	%start_pExp13 -> Exp13                             (15)
	%start_pExp12 -> Exp12                             (16)
	%start_pExp11 -> Exp11                             (17)
	%start_pExp10 -> Exp10                             (18)
	%start_pExp9 -> Exp9                               (19)
	%start_pExp8 -> Exp8                               (20)
	%start_pExp4 -> Exp4                               (21)
	%start_pExp3 -> Exp3                               (22)
	%start_pExp2 -> Exp2                               (23)
	%start_pExp1 -> Exp1                               (24)
	%start_pExp -> Exp                                 (25)
	%start_pExp5 -> Exp5                               (26)
	%start_pExp6 -> Exp6                               (27)
	%start_pExp7 -> Exp7                               (28)
	%start_pListExp -> ListExp                         (29)
	%start_pLiteral -> Literal                         (30)
	%start_pQConstPart -> QConstPart                   (31)
	%start_pListString -> ListString                   (32)
	%start_pListQConstPart -> ListQConstPart           (33)
	Integer -> L_integ                                 (34)
	Char -> L_charac                                   (35)
	Double -> L_doubl                                  (36)
	String -> L_quoted                                 (37)
	CIdent -> L_CIdent                                 (38)
	Program -> ListDef                                 (39)
	Def -> 'inline' Type CIdent '(' ListArg ')' '{' ListStm '}'   (40)
	Def -> Type CIdent '(' ListArg ')' '{' ListStm '}'   (41)
	Def -> 'using' ListQConstPart ';'                  (42)
	Def -> 'typedef' Type CIdent ';'                   (43)
	Def -> Type CIdent '(' ListArg ')' ';'             (44)
	Def -> 'inline' Type CIdent '(' ListArg ')' ';'    (45)
	Def -> 'struct' CIdent '{' ListStructDecl '}' ';'   (46)
	Def -> Type '&' CIdent '=' CIdent ';'              (47)
	Def -> Type ListCIdent ';'                         (48)
	Def -> Type CIdent '=' Exp ';'                     (49)
	ListDef ->                                         (50)
	ListDef -> ListDef Def                             (51)
	Type -> 'bool'                                     (52)
	Type -> 'int'                                      (53)
	Type -> 'double'                                   (54)
	Type -> 'void'                                     (55)
	Type -> ListQConstPart                             (56)
	Type -> Type '&'                                   (57)
	ListType -> Type                                   (58)
	ListType -> Type ',' ListType                      (59)
	ListCIdent -> CIdent                               (60)
	ListCIdent -> CIdent ',' ListCIdent                (61)
	StructDecl -> Type CIdent                          (62)
	ListStructDecl ->                                  (63)
	ListStructDecl -> ListStructDecl StructDecl ';'    (64)
	Arg -> Type                                        (65)
	Arg -> Type CIdent                                 (66)
	Arg -> Type CIdent '=' Exp                         (67)
	Arg -> 'const' Type                                (68)
	Arg -> 'const' Type CIdent                         (69)
	Arg -> 'const' Type CIdent '=' Exp                 (70)
	ListArg ->                                         (71)
	ListArg -> Arg                                     (72)
	ListArg -> Arg ',' ListArg                         (73)
	Stm -> 'struct' CIdent '{' ListStructDecl '}' ';'   (74)
	Stm -> Exp ';'                                     (75)
	Stm -> 'return' Exp ';'                            (76)
	Stm -> Type ListCIdent ';'                         (77)
	Stm -> 'while' '(' Exp ')' Stm                     (78)
	Stm -> '{' ListStm '}'                             (79)
	Stm -> 'if' '(' Exp ')' Stm                        (80)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (81)
	Stm -> 'typedef' ListQConstPart CIdent ';'         (82)
	Stm -> 'for' '(' Arg ';' Exp ';' Exp ')' Stm       (83)
	Stm -> 'const' Arg ';'                             (84)
	Stm -> Type CIdent '=' Exp ';'                     (85)
	Stm -> 'do' Stm 'while' '(' Exp ')' ';'            (86)
	ListStm ->                                         (87)
	ListStm -> ListStm Stm                             (88)
	Exp16 -> ListQConstPart                            (89)
	Exp16 -> Literal                                   (90)
	Exp16 -> '(' Exp ')'                               (91)
	Exp15 -> Exp15 '[' Exp11 ']'                       (92)
	Exp15 -> CIdent '(' ListExp ')'                    (93)
	Exp15 -> Exp16                                     (94)
	Exp14 -> Exp14 '->' Exp15                          (95)
	Exp14 -> Exp14 '.' Exp15                           (96)
	Exp14 -> Exp15 '--'                                (97)
	Exp14 -> Exp15 '++'                                (98)
	Exp14 -> Exp15                                     (99)
	Exp13 -> '!' Exp14                                 (100)
	Exp13 -> '*' Exp14                                 (101)
	Exp13 -> '--' Exp14                                (102)
	Exp13 -> '++' Exp14                                (103)
	Exp13 -> Exp14                                     (104)
	Exp12 -> Exp12 '%' Exp13                           (105)
	Exp12 -> Exp12 '/' Exp13                           (106)
	Exp12 -> Exp12 '*' Exp13                           (107)
	Exp12 -> Exp13                                     (108)
	Exp11 -> Exp11 '-' Exp12                           (109)
	Exp11 -> Exp11 '+' Exp12                           (110)
	Exp11 -> Exp12                                     (111)
	Exp10 -> Exp10 '<<' Exp11                          (112)
	Exp10 -> Exp10 '>>' Exp11                          (113)
	Exp10 -> Exp11                                     (114)
	Exp9 -> Exp9 '<' Exp10                             (115)
	Exp9 -> Exp9 '>' Exp10                             (116)
	Exp9 -> Exp9 '<=' Exp10                            (117)
	Exp9 -> Exp9 '>=' Exp10                            (118)
	Exp9 -> Exp10                                      (119)
	Exp8 -> Exp8 '==' Exp9                             (120)
	Exp8 -> Exp8 '!=' Exp9                             (121)
	Exp8 -> Exp9                                       (122)
	Exp4 -> Exp4 '&&' Exp5                             (123)
	Exp4 -> Exp5                                       (124)
	Exp3 -> Exp3 '||' Exp4                             (125)
	Exp3 -> Exp4                                       (126)
	Exp2 -> Exp3 '=' Exp2                              (127)
	Exp2 -> Exp3 '+=' Exp2                             (128)
	Exp2 -> Exp3 '-=' Exp2                             (129)
	Exp2 -> Exp3 '?' Exp2 ':' Exp2                     (130)
	Exp2 -> Exp3                                       (131)
	Exp1 -> 'throw' Exp2                               (132)
	Exp1 -> Exp2                                       (133)
	Exp -> Exp1                                        (134)
	Exp5 -> Exp6                                       (135)
	Exp6 -> Exp7                                       (136)
	Exp7 -> Exp8                                       (137)
	ListExp ->                                         (138)
	ListExp -> Exp                                     (139)
	ListExp -> Exp ',' ListExp                         (140)
	Literal -> ListString                              (141)
	Literal -> Integer                                 (142)
	Literal -> Char                                    (143)
	Literal -> Double                                  (144)
	QConstPart -> CIdent                               (145)
	QConstPart -> CIdent '<' ListType '>'              (146)
	ListString -> String                               (147)
	ListString -> String ListString                    (148)
	ListQConstPart -> QConstPart                       (149)
	ListQConstPart -> QConstPart '::' ListQConstPart   (150)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'>>'           { PT _ (TS _ 29) }
	'?'            { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'const'        { PT _ (TS _ 34) }
	'do'           { PT _ (TS _ 35) }
	'double'       { PT _ (TS _ 36) }
	'else'         { PT _ (TS _ 37) }
	'for'          { PT _ (TS _ 38) }
	'if'           { PT _ (TS _ 39) }
	'inline'       { PT _ (TS _ 40) }
	'int'          { PT _ (TS _ 41) }
	'return'       { PT _ (TS _ 42) }
	'struct'       { PT _ (TS _ 43) }
	'throw'        { PT _ (TS _ 44) }
	'typedef'      { PT _ (TS _ 45) }
	'using'        { PT _ (TS _ 46) }
	'void'         { PT _ (TS _ 47) }
	'while'        { PT _ (TS _ 48) }
	'{'            { PT _ (TS _ 49) }
	'||'           { PT _ (TS _ 50) }
	'}'            { PT _ (TS _ 51) }
	L_integ        { PT _ (TI $$) }
	L_charac       { PT _ (TC $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_CIdent       { PT _ (T_CIdent $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pListDef rule  2
	%start_pType    rule  3
	%start_pListType rule  4
	%start_pListCIdent rule  5
	%start_pStructDecl rule  6
	%start_pListStructDecl rule  7
	%start_pArg     rule  8
	%start_pListArg rule  9
	%start_pStm     rule  10
	%start_pListStm rule  11
	%start_pExp16   rule  12
	%start_pExp15   rule  13
	%start_pExp14   rule  14
	%start_pExp13   rule  15
	%start_pExp12   rule  16
	%start_pExp11   rule  17
	%start_pExp10   rule  18
	%start_pExp9    rule  19
	%start_pExp8    rule  20
	%start_pExp4    rule  21
	%start_pExp3    rule  22
	%start_pExp2    rule  23
	%start_pExp1    rule  24
	%start_pExp     rule  25
	%start_pExp5    rule  26
	%start_pExp6    rule  27
	%start_pExp7    rule  28
	%start_pListExp rule  29
	%start_pLiteral rule  30
	%start_pQConstPart rule  31
	%start_pListString rule  32
	%start_pListQConstPart rule  33
	Integer         rule  34
	Char            rule  35
	Double          rule  36
	String          rule  37
	CIdent          rule  38
	Program         rule  39
	Def             rules 40, 41, 42, 43, 44, 45, 46, 47, 48, 49
	ListDef         rules 50, 51
	Type            rules 52, 53, 54, 55, 56, 57
	ListType        rules 58, 59
	ListCIdent      rules 60, 61
	StructDecl      rule  62
	ListStructDecl  rules 63, 64
	Arg             rules 65, 66, 67, 68, 69, 70
	ListArg         rules 71, 72, 73
	Stm             rules 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86
	ListStm         rules 87, 88
	Exp16           rules 89, 90, 91
	Exp15           rules 92, 93, 94
	Exp14           rules 95, 96, 97, 98, 99
	Exp13           rules 100, 101, 102, 103, 104
	Exp12           rules 105, 106, 107, 108
	Exp11           rules 109, 110, 111
	Exp10           rules 112, 113, 114
	Exp9            rules 115, 116, 117, 118, 119
	Exp8            rules 120, 121, 122
	Exp4            rules 123, 124
	Exp3            rules 125, 126
	Exp2            rules 127, 128, 129, 130, 131
	Exp1            rules 132, 133
	Exp             rule  134
	Exp5            rule  135
	Exp6            rule  136
	Exp7            rule  137
	ListExp         rules 138, 139, 140
	Literal         rules 141, 142, 143, 144
	QConstPart      rules 145, 146
	ListString      rules 147, 148
	ListQConstPart  rules 149, 150

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 50
	'double'       reduce using rule 50
	'inline'       reduce using rule 50
	'int'          reduce using rule 50
	'struct'       reduce using rule 50
	'typedef'      reduce using rule 50
	'using'        reduce using rule 50
	'void'         reduce using rule 50
	L_CIdent       reduce using rule 50
	%eof           reduce using rule 50

	Program        goto state 134
	ListDef        goto state 135

State 1


	'bool'         shift, and enter state 100
	'double'       shift, and enter state 103
	'inline'       shift, and enter state 130
	'int'          shift, and enter state 106
	'struct'       shift, and enter state 131
	'typedef'      shift, and enter state 132
	'using'        shift, and enter state 133
	'void'         shift, and enter state 110
	L_CIdent       shift, and enter state 39

	CIdent         goto state 36
	Def            goto state 128
	Type           goto state 129
	QConstPart     goto state 37
	ListQConstPart goto state 116

State 2


	'bool'         reduce using rule 50
	'double'       reduce using rule 50
	'inline'       reduce using rule 50
	'int'          reduce using rule 50
	'struct'       reduce using rule 50
	'typedef'      reduce using rule 50
	'using'        reduce using rule 50
	'void'         reduce using rule 50
	L_CIdent       reduce using rule 50
	%eof           reduce using rule 50

	ListDef        goto state 127

State 3


	'bool'         shift, and enter state 100
	'double'       shift, and enter state 103
	'int'          shift, and enter state 106
	'void'         shift, and enter state 110
	L_CIdent       shift, and enter state 39

	CIdent         goto state 36
	Type           goto state 126
	QConstPart     goto state 37
	ListQConstPart goto state 116

State 4


	'bool'         shift, and enter state 100
	'double'       shift, and enter state 103
	'int'          shift, and enter state 106
	'void'         shift, and enter state 110
	L_CIdent       shift, and enter state 39

	CIdent         goto state 36
	Type           goto state 124
	ListType       goto state 125
	QConstPart     goto state 37
	ListQConstPart goto state 116

State 5


	L_CIdent       shift, and enter state 39

	CIdent         goto state 122
	ListCIdent     goto state 123

State 6


	'bool'         shift, and enter state 100
	'double'       shift, and enter state 103
	'int'          shift, and enter state 106
	'void'         shift, and enter state 110
	L_CIdent       shift, and enter state 39

	CIdent         goto state 36
	Type           goto state 120
	StructDecl     goto state 121
	QConstPart     goto state 37
	ListQConstPart goto state 116

State 7


	'bool'         reduce using rule 63
	'double'       reduce using rule 63
	'int'          reduce using rule 63
	'void'         reduce using rule 63
	L_CIdent       reduce using rule 63
	%eof           reduce using rule 63

	ListStructDecl goto state 119

State 8


	'bool'         shift, and enter state 100
	'const'        shift, and enter state 117
	'double'       shift, and enter state 103
	'int'          shift, and enter state 106
	'void'         shift, and enter state 110
	L_CIdent       shift, and enter state 39

	CIdent         goto state 36
	Type           goto state 113
	Arg            goto state 118
	QConstPart     goto state 37
	ListQConstPart goto state 116

State 9


	'bool'         shift, and enter state 100
	'const'        shift, and enter state 117
	'double'       shift, and enter state 103
	'int'          shift, and enter state 106
	'void'         shift, and enter state 110
	L_CIdent       shift, and enter state 39
	%eof           reduce using rule 71

	CIdent         goto state 36
	Type           goto state 113
	Arg            goto state 114
	ListArg        goto state 115
	QConstPart     goto state 37
	ListQConstPart goto state 116

State 10


	'!'            shift, and enter state 72
	'('            shift, and enter state 73
	'*'            shift, and enter state 74
	'++'           shift, and enter state 75
	'--'           shift, and enter state 76
	'bool'         shift, and enter state 100
	'const'        shift, and enter state 101
	'do'           shift, and enter state 102
	'double'       shift, and enter state 103
	'for'          shift, and enter state 104
	'if'           shift, and enter state 105
	'int'          shift, and enter state 106
	'return'       shift, and enter state 107
	'struct'       shift, and enter state 108
	'throw'        shift, and enter state 77
	'typedef'      shift, and enter state 109
	'void'         shift, and enter state 110
	'while'        shift, and enter state 111
	'{'            shift, and enter state 112
	L_integ        shift, and enter state 35
	L_charac       shift, and enter state 49
	L_doubl        shift, and enter state 50
	L_quoted       shift, and enter state 42
	L_CIdent       shift, and enter state 39

	Integer        goto state 44
	Char           goto state 45
	Double         goto state 46
	String         goto state 40
	CIdent         goto state 51
	Type           goto state 96
	Stm            goto state 97
	Exp16          goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 59
	Exp8           goto state 60
	Exp4           goto state 61
	Exp3           goto state 62
	Exp2           goto state 63
	Exp1           goto state 64
	Exp            goto state 98
	Exp5           goto state 66
	Exp6           goto state 67
	Exp7           goto state 68
	Literal        goto state 70
	QConstPart     goto state 37
	ListString     goto state 48
	ListQConstPart goto state 99

State 11


	'!'            reduce using rule 87
	'('            reduce using rule 87
	'*'            reduce using rule 87
	'++'           reduce using rule 87
	'--'           reduce using rule 87
	'bool'         reduce using rule 87
	'const'        reduce using rule 87
	'do'           reduce using rule 87
	'double'       reduce using rule 87
	'for'          reduce using rule 87
	'if'           reduce using rule 87
	'int'          reduce using rule 87
	'return'       reduce using rule 87
	'struct'       reduce using rule 87
	'throw'        reduce using rule 87
	'typedef'      reduce using rule 87
	'void'         reduce using rule 87
	'while'        reduce using rule 87
	'{'            reduce using rule 87
	L_integ        reduce using rule 87
	L_charac       reduce using rule 87
	L_doubl        reduce using rule 87
	L_quoted       reduce using rule 87
	L_CIdent       reduce using rule 87
	%eof           reduce using rule 87

	ListStm        goto state 95

State 12


	'('            shift, and enter state 73
	L_integ        shift, and enter state 35
	L_charac       shift, and enter state 49
	L_doubl        shift, and enter state 50
	L_quoted       shift, and enter state 42
	L_CIdent       shift, and enter state 39

	Integer        goto state 44
	Char           goto state 45
	Double         goto state 46
	String         goto state 40
	CIdent         goto state 36
	Exp16          goto state 94
	Literal        goto state 70
	QConstPart     goto state 37
	ListString     goto state 48
	ListQConstPart goto state 71

State 13


	'('            shift, and enter state 73
	L_integ        shift, and enter state 35
	L_charac       shift, and enter state 49
	L_doubl        shift, and enter state 50
	L_quoted       shift, and enter state 42
	L_CIdent       shift, and enter state 39

	Integer        goto state 44
	Char           goto state 45
	Double         goto state 46
	String         goto state 40
	CIdent         goto state 51
	Exp16          goto state 52
	Exp15          goto state 93
	Literal        goto state 70
	QConstPart     goto state 37
	ListString     goto state 48
	ListQConstPart goto state 71

State 14


	'('            shift, and enter state 73
	L_integ        shift, and enter state 35
	L_charac       shift, and enter state 49
	L_doubl        shift, and enter state 50
	L_quoted       shift, and enter state 42
	L_CIdent       shift, and enter state 39

	Integer        goto state 44
	Char           goto state 45
	Double         goto state 46
	String         goto state 40
	CIdent         goto state 51
	Exp16          goto state 52
	Exp15          goto state 53
	Exp14          goto state 92
	Literal        goto state 70
	QConstPart     goto state 37
	ListString     goto state 48
	ListQConstPart goto state 71

State 15


	'!'            shift, and enter state 72
	'('            shift, and enter state 73
	'*'            shift, and enter state 74
	'++'           shift, and enter state 75
	'--'           shift, and enter state 76
	L_integ        shift, and enter state 35
	L_charac       shift, and enter state 49
	L_doubl        shift, and enter state 50
	L_quoted       shift, and enter state 42
	L_CIdent       shift, and enter state 39

	Integer        goto state 44
	Char           goto state 45
	Double         goto state 46
	String         goto state 40
	CIdent         goto state 51
	Exp16          goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp13          goto state 91
	Literal        goto state 70
	QConstPart     goto state 37
	ListString     goto state 48
	ListQConstPart goto state 71

State 16


	'!'            shift, and enter state 72
	'('            shift, and enter state 73
	'*'            shift, and enter state 74
	'++'           shift, and enter state 75
	'--'           shift, and enter state 76
	L_integ        shift, and enter state 35
	L_charac       shift, and enter state 49
	L_doubl        shift, and enter state 50
	L_quoted       shift, and enter state 42
	L_CIdent       shift, and enter state 39

	Integer        goto state 44
	Char           goto state 45
	Double         goto state 46
	String         goto state 40
	CIdent         goto state 51
	Exp16          goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 90
	Literal        goto state 70
	QConstPart     goto state 37
	ListString     goto state 48
	ListQConstPart goto state 71

State 17


	'!'            shift, and enter state 72
	'('            shift, and enter state 73
	'*'            shift, and enter state 74
	'++'           shift, and enter state 75
	'--'           shift, and enter state 76
	L_integ        shift, and enter state 35
	L_charac       shift, and enter state 49
	L_doubl        shift, and enter state 50
	L_quoted       shift, and enter state 42
	L_CIdent       shift, and enter state 39

	Integer        goto state 44
	Char           goto state 45
	Double         goto state 46
	String         goto state 40
	CIdent         goto state 51
	Exp16          goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 89
	Literal        goto state 70
	QConstPart     goto state 37
	ListString     goto state 48
	ListQConstPart goto state 71

State 18


	'!'            shift, and enter state 72
	'('            shift, and enter state 73
	'*'            shift, and enter state 74
	'++'           shift, and enter state 75
	'--'           shift, and enter state 76
	L_integ        shift, and enter state 35
	L_charac       shift, and enter state 49
	L_doubl        shift, and enter state 50
	L_quoted       shift, and enter state 42
	L_CIdent       shift, and enter state 39

	Integer        goto state 44
	Char           goto state 45
	Double         goto state 46
	String         goto state 40
	CIdent         goto state 51
	Exp16          goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 88
	Literal        goto state 70
	QConstPart     goto state 37
	ListString     goto state 48
	ListQConstPart goto state 71

State 19


	'!'            shift, and enter state 72
	'('            shift, and enter state 73
	'*'            shift, and enter state 74
	'++'           shift, and enter state 75
	'--'           shift, and enter state 76
	L_integ        shift, and enter state 35
	L_charac       shift, and enter state 49
	L_doubl        shift, and enter state 50
	L_quoted       shift, and enter state 42
	L_CIdent       shift, and enter state 39

	Integer        goto state 44
	Char           goto state 45
	Double         goto state 46
	String         goto state 40
	CIdent         goto state 51
	Exp16          goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 87
	Literal        goto state 70
	QConstPart     goto state 37
	ListString     goto state 48
	ListQConstPart goto state 71

State 20


	'!'            shift, and enter state 72
	'('            shift, and enter state 73
	'*'            shift, and enter state 74
	'++'           shift, and enter state 75
	'--'           shift, and enter state 76
	L_integ        shift, and enter state 35
	L_charac       shift, and enter state 49
	L_doubl        shift, and enter state 50
	L_quoted       shift, and enter state 42
	L_CIdent       shift, and enter state 39

	Integer        goto state 44
	Char           goto state 45
	Double         goto state 46
	String         goto state 40
	CIdent         goto state 51
	Exp16          goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 59
	Exp8           goto state 86
	Literal        goto state 70
	QConstPart     goto state 37
	ListString     goto state 48
	ListQConstPart goto state 71

State 21


	'!'            shift, and enter state 72
	'('            shift, and enter state 73
	'*'            shift, and enter state 74
	'++'           shift, and enter state 75
	'--'           shift, and enter state 76
	L_integ        shift, and enter state 35
	L_charac       shift, and enter state 49
	L_doubl        shift, and enter state 50
	L_quoted       shift, and enter state 42
	L_CIdent       shift, and enter state 39

	Integer        goto state 44
	Char           goto state 45
	Double         goto state 46
	String         goto state 40
	CIdent         goto state 51
	Exp16          goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 59
	Exp8           goto state 60
	Exp4           goto state 85
	Exp5           goto state 66
	Exp6           goto state 67
	Exp7           goto state 68
	Literal        goto state 70
	QConstPart     goto state 37
	ListString     goto state 48
	ListQConstPart goto state 71

State 22


	'!'            shift, and enter state 72
	'('            shift, and enter state 73
	'*'            shift, and enter state 74
	'++'           shift, and enter state 75
	'--'           shift, and enter state 76
	L_integ        shift, and enter state 35
	L_charac       shift, and enter state 49
	L_doubl        shift, and enter state 50
	L_quoted       shift, and enter state 42
	L_CIdent       shift, and enter state 39

	Integer        goto state 44
	Char           goto state 45
	Double         goto state 46
	String         goto state 40
	CIdent         goto state 51
	Exp16          goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 59
	Exp8           goto state 60
	Exp4           goto state 61
	Exp3           goto state 84
	Exp5           goto state 66
	Exp6           goto state 67
	Exp7           goto state 68
	Literal        goto state 70
	QConstPart     goto state 37
	ListString     goto state 48
	ListQConstPart goto state 71

State 23


	'!'            shift, and enter state 72
	'('            shift, and enter state 73
	'*'            shift, and enter state 74
	'++'           shift, and enter state 75
	'--'           shift, and enter state 76
	L_integ        shift, and enter state 35
	L_charac       shift, and enter state 49
	L_doubl        shift, and enter state 50
	L_quoted       shift, and enter state 42
	L_CIdent       shift, and enter state 39

	Integer        goto state 44
	Char           goto state 45
	Double         goto state 46
	String         goto state 40
	CIdent         goto state 51
	Exp16          goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 59
	Exp8           goto state 60
	Exp4           goto state 61
	Exp3           goto state 62
	Exp2           goto state 83
	Exp5           goto state 66
	Exp6           goto state 67
	Exp7           goto state 68
	Literal        goto state 70
	QConstPart     goto state 37
	ListString     goto state 48
	ListQConstPart goto state 71

State 24


	'!'            shift, and enter state 72
	'('            shift, and enter state 73
	'*'            shift, and enter state 74
	'++'           shift, and enter state 75
	'--'           shift, and enter state 76
	'throw'        shift, and enter state 77
	L_integ        shift, and enter state 35
	L_charac       shift, and enter state 49
	L_doubl        shift, and enter state 50
	L_quoted       shift, and enter state 42
	L_CIdent       shift, and enter state 39

	Integer        goto state 44
	Char           goto state 45
	Double         goto state 46
	String         goto state 40
	CIdent         goto state 51
	Exp16          goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 59
	Exp8           goto state 60
	Exp4           goto state 61
	Exp3           goto state 62
	Exp2           goto state 63
	Exp1           goto state 82
	Exp5           goto state 66
	Exp6           goto state 67
	Exp7           goto state 68
	Literal        goto state 70
	QConstPart     goto state 37
	ListString     goto state 48
	ListQConstPart goto state 71

State 25


	'!'            shift, and enter state 72
	'('            shift, and enter state 73
	'*'            shift, and enter state 74
	'++'           shift, and enter state 75
	'--'           shift, and enter state 76
	'throw'        shift, and enter state 77
	L_integ        shift, and enter state 35
	L_charac       shift, and enter state 49
	L_doubl        shift, and enter state 50
	L_quoted       shift, and enter state 42
	L_CIdent       shift, and enter state 39

	Integer        goto state 44
	Char           goto state 45
	Double         goto state 46
	String         goto state 40
	CIdent         goto state 51
	Exp16          goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 59
	Exp8           goto state 60
	Exp4           goto state 61
	Exp3           goto state 62
	Exp2           goto state 63
	Exp1           goto state 64
	Exp            goto state 81
	Exp5           goto state 66
	Exp6           goto state 67
	Exp7           goto state 68
	Literal        goto state 70
	QConstPart     goto state 37
	ListString     goto state 48
	ListQConstPart goto state 71

State 26


	'!'            shift, and enter state 72
	'('            shift, and enter state 73
	'*'            shift, and enter state 74
	'++'           shift, and enter state 75
	'--'           shift, and enter state 76
	L_integ        shift, and enter state 35
	L_charac       shift, and enter state 49
	L_doubl        shift, and enter state 50
	L_quoted       shift, and enter state 42
	L_CIdent       shift, and enter state 39

	Integer        goto state 44
	Char           goto state 45
	Double         goto state 46
	String         goto state 40
	CIdent         goto state 51
	Exp16          goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 59
	Exp8           goto state 60
	Exp5           goto state 80
	Exp6           goto state 67
	Exp7           goto state 68
	Literal        goto state 70
	QConstPart     goto state 37
	ListString     goto state 48
	ListQConstPart goto state 71

State 27


	'!'            shift, and enter state 72
	'('            shift, and enter state 73
	'*'            shift, and enter state 74
	'++'           shift, and enter state 75
	'--'           shift, and enter state 76
	L_integ        shift, and enter state 35
	L_charac       shift, and enter state 49
	L_doubl        shift, and enter state 50
	L_quoted       shift, and enter state 42
	L_CIdent       shift, and enter state 39

	Integer        goto state 44
	Char           goto state 45
	Double         goto state 46
	String         goto state 40
	CIdent         goto state 51
	Exp16          goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 59
	Exp8           goto state 60
	Exp6           goto state 79
	Exp7           goto state 68
	Literal        goto state 70
	QConstPart     goto state 37
	ListString     goto state 48
	ListQConstPart goto state 71

State 28


	'!'            shift, and enter state 72
	'('            shift, and enter state 73
	'*'            shift, and enter state 74
	'++'           shift, and enter state 75
	'--'           shift, and enter state 76
	L_integ        shift, and enter state 35
	L_charac       shift, and enter state 49
	L_doubl        shift, and enter state 50
	L_quoted       shift, and enter state 42
	L_CIdent       shift, and enter state 39

	Integer        goto state 44
	Char           goto state 45
	Double         goto state 46
	String         goto state 40
	CIdent         goto state 51
	Exp16          goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 59
	Exp8           goto state 60
	Exp7           goto state 78
	Literal        goto state 70
	QConstPart     goto state 37
	ListString     goto state 48
	ListQConstPart goto state 71

State 29


	'!'            shift, and enter state 72
	'('            shift, and enter state 73
	'*'            shift, and enter state 74
	'++'           shift, and enter state 75
	'--'           shift, and enter state 76
	'throw'        shift, and enter state 77
	L_integ        shift, and enter state 35
	L_charac       shift, and enter state 49
	L_doubl        shift, and enter state 50
	L_quoted       shift, and enter state 42
	L_CIdent       shift, and enter state 39
	%eof           reduce using rule 138
